--- a/Churchillklubben.html
+++ b/Churchillklubben.html
@@ -113,7 +113,7 @@
   <!-- Navbar -->
   <div class="navbar">
     <div class="nav-left">
-      <button onclick="openAndClose('churchillklubben.html')">Churchill klubben</button>
+      <button onclick="openAndClose('Churchillklubben.html')">Churchill klubben</button>
       <button onclick="openAndClose('Holgerdanske.html')">Holger Danske</button>
       <button onclick="openAndClose('BOPA.html')">BOPA</button>
       <button onclick="openAndClose('modstand.html')">Modstand</button>
@@ -195,5 +195,6 @@
 
 </body>
 </html>
+
 
 
