--- a/modstand.html
+++ b/modstand.html
@@ -189,7 +189,7 @@
   <!-- Navbar -->
   <div class="navbar">
     <div class="nav-left">
-      <button onclick="openAndClose('churchillklubben.html')">Churchill klubben</button>
+      <button onclick="openAndClose('Churchillklubben.html')">Churchill klubben</button>
       <button onclick="openAndClose('Holgerdanske.html')">Holger Danske</button>
       <button onclick="openAndClose('BOPA.html')">BOPA</button>
       <button onclick="openAndClose('modstand.html')">Modstand</button>
@@ -398,4 +398,5 @@
   </script>
 </body>
 </html>
+
 
