--- a/Holgerdanske.html
+++ b/Holgerdanske.html
@@ -106,6 +106,7 @@
       margin: 0 0 20px 0;
       color: #f9f9f9;
     }
+
   </style>
 </head>
 <body>
@@ -119,8 +120,10 @@
       <button onclick="openAndClose('modstand.html')">Modstand</button>
     </div>
     <div class="nav-right">
-      <span id="timer">00:00:00</span>
-    </div>
+  <span id="timer">00:00:00</span>
+  <a href="SWOON.html" target="_blank" style="margin-left: 20px; color: #f4f4f4; text-decoration: underline; font-size: 20px;">SWOON</a>
+</div>
+
   </div>
 
   <script>
@@ -202,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
