--- a/Holgerdanske.html
+++ b/Holgerdanske.html
@@ -48,30 +48,12 @@
     }
 
  .nav-right {
-  display: flex;
-  align-items: center;
-  gap: 20px;
-  font-family: "Courier New", monospace;
-  color: #f4f4f4;
-  text-shadow: 0 0 8px #484848;
-  letter-spacing: 2px;
-  font-size: 28px;
-}
-
-.nav-right .nav-button {
-  padding: 8px 14px;
-  background: transparent;
-  border: none;
-  color: #fff;
-  cursor: pointer;
-  font-size: 24px;
-  transition: color .2s, border-bottom .2s;
-}
-
-.nav-right .nav-button:hover {
-  color: #ddd;
-  border-bottom: 2px solid #fff;
-}
+      font-family: "Courier New", monospace;
+      color: #f4f4f4;
+      text-shadow: 0 0 8px #484848;
+      letter-spacing: 2px;
+      font-size: 28px;
+    }
 
 
     .content {
@@ -137,10 +119,10 @@
       <button onclick="openAndClose('Holgerdanske.html')">Holger Danske</button>
       <button onclick="openAndClose('BOPA.html')">BOPA</button>
       <button onclick="openAndClose('modstand.html')">Modstand</button>
+      <button onclick="openAndClose('SWOON.html')">Dagligdag</button>
     </div>
  <div class="nav-right">
   <span id="timer">00:00:00</span>
-  <button onclick="openAndClose('SWOON.html')" class="nav-button">SWOON</button>
 </div>
   </div>
 
@@ -223,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
