--- a/modstand.html
+++ b/modstand.html
@@ -192,6 +192,7 @@
       <button onclick="openAndClose('Holgerdanske.html')">Holger Danske</button>
       <button onclick="openAndClose('BOPA.html')">BOPA</button>
       <button onclick="openAndClose('modstand.html')">Modstand</button>
+      <button onclick="openAndClose('SWOON.html')">Dagligdag</button>
     </div>
     <div class="nav-right">
       <span id="timer">00:00:00</span>
@@ -397,6 +398,7 @@
   </script>
 </body>
 </html>
+
 
 
 
