--- a/Churchillklubben.html
+++ b/Churchillklubben.html
@@ -117,6 +117,7 @@
       <button onclick="openAndClose('Holgerdanske.html')">Holger Danske</button>
       <button onclick="openAndClose('BOPA.html')">BOPA</button>
       <button onclick="openAndClose('modstand.html')">Modstand</button>
+      <button onclick="openAndClose('SWOON.html')">Dagligdag</button>
     </div>
     <div class="nav-right">
       <span id="timer">00:00:00</span>
@@ -195,6 +196,7 @@
 
 </body>
 </html>
+
 
 
 
