--- a/SWOON.html
+++ b/SWOON.html
@@ -122,9 +122,7 @@
   <div class="navbar">
     <div class="nav-left">
       <button onclick="openAndClose('SWOON.html')">Dagligdagens Udfordringer</button>
-      <button onclick="openAndClose('GUNNERS.html')">Holger Danske</button>
-      <button onclick="openAndClose('PISTOLER.html')">BOPA</button>
-      <button onclick="openAndClose('GOON.html')">Modstand</button>
+      <button onclick="openAndClose('GUNNERS.html')">Endringer</button>
     </div>
     <div class="nav-right">
       <span id="timer">00:00:00</span>
