--- a/Churchillklubben.html
+++ b/Churchillklubben.html
@@ -117,7 +117,8 @@
       <button onclick="openAndClose('Holgerdanske.html')">Holger Danske</button>
       <button onclick="openAndClose('BOPA.html')">BOPA</button>
       <button onclick="openAndClose('modstand.html')">Modstand</button>
-      <button onclick="openAndClose('SWOON.html')">Dagligdag</button>
+      <button onclick="openAndClose('SWOON.html')">Dagligdag Udfordringer</button>
+      <button onclick="openAndClose('GUNNERS.html')">Oplevelse</button>
     </div>
     <div class="nav-right">
       <span id="timer">00:00:00</span>
@@ -196,6 +197,7 @@
 
 </body>
 </html>
+
 
 
 
